--- a/src/modals/Profile/Profile.scss
+++ b/src/modals/Profile/Profile.scss
@@ -2,6 +2,22 @@
 @import "../../styles/@variables.scss";
 
 .profile {
+
+    &__avatar {
+        margin: 0 auto;
+        width: 150px;
+        height: 150px;
+        margin-bottom: 20px;
+        border: 3px 	  solid #635fc7;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+
+    &__form {
+        display: flex;
+        flex-direction: column;
+        
+    }
     &__wrapper {
         display: flex;
         justify-content: space-between;
