--- a/src/modals/Profile/Profile.scss
+++ b/src/modals/Profile/Profile.scss
@@ -50,11 +50,15 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding-bottom: 20px;
+        // padding-bottom: 20px;
     }
 
     &__input-error {
-        color: red;
+        text-align: right;
+        color: #9d3939;
+        margin: 10px 0 10px;
+        height: 20px;
+        @include heading-s
     }
 
     &__buttons {
